[package]
name = "r2deob"
version = "0.1.0"
authors = ["xermicus <bigcyrill@hotmail.com>"]
edition = "2018"

[dependencies]
r2pipe = "0.4.0"
serde_json = "1.0.27"
rand = "0.5.5"
rsmt2 = "0.10.0"
#programinduction = "0.7.4"
rayon = "1.0.2"
enum-iterator = "0.3.0"
simdeez = "0.6.3"

[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "simd_bench"
harness = false
path = "src/simd_bench.rs"
